Change for GDS one way and Roundtrip seat,meal barcode and Corporate

--- a/CoporateBooking/Views/AKTripsell/_AKContactDetailsPartialView.cshtml
+++ b/CoporateBooking/Views/AKTripsell/_AKContactDetailsPartialView.cshtml
@@ -58,9 +58,9 @@
                 <div class="kk">
                     Same as lead passenger <button id="leadpassengerButton2" class="checkbox-button ms-2"></button>
                 </div>
-                <div class="ms-3">
-                    Do you have GST  <button id="GSTButton2" class="checkbox-button ms-2"></button>
-
+                <div class="ms-3 hidden">
+                    Do you have GST
+                    <input type="checkbox" id="GSTButton2" class="checkbox-button ms-2" checked>
                 </div>
             </div>
             <div><input type="submit" class="btn btn-primary pagelaodSg" value="Save" /></div>
@@ -74,14 +74,14 @@
         <div class="col-md-3">
             <div class="form-input">
 
-                <input type="text" id="gstname" maxlength="32" name="companyName" oninput="validateInputgst(event)" class="companyName hid-block hidden" placeholder="Company Name">
+                <input type="text" id="gstname" maxlength="32" name="companyName" oninput="validateInputgst(event)" class="companyName hid-block" placeholder="Company Name">
             </div>
             <p id="errorMessagegst" style="color: red;font-size:13px;"></p>
             <p id="error-message9" class="error-message" style="display:none">Enter Company Name</p>
         </div>
         <div class="col-md-3">
             <div class="form-input">
-                <input type="text" id="gstnumber" maxlength="15" name="customerNumber" oninput="validateGST(event)" class="companyName hid-block hidden" placeholder="GST Number">
+                <input type="text" id="gstnumber" maxlength="15" name="customerNumber" oninput="validateGST(event)" class="companyName hid-block " placeholder="GST Number">
             </div>
             <p id="gstErrorMessage" style="color: red;font-size:13px;"></p>
             <p id="error-message10" class="error-message" style="display:none">Enter GST Number</p>
@@ -90,9 +90,10 @@
 
         <div class="col-md-3">
             <div class="form-input">
-                <input type="text" name="emailAddressgst" maxlength="30" oninput="validateEmailGST(event)" class="gstemail hid-block hidden" id="emailAddressGST" placeholder="Email ID">
+                <input type="text" name="emailAddressgst" maxlength="30" oninput="validateEmailGST(event)" class="gstemail hid-block " id="emailAddressGST" placeholder="Email ID">
             </div>
             <p id="emailErrorMessageGST" style="color: red; font-size:13px;"></p>
+            <p id="error-1email" class="error-message" style="display:none">Enter email address</p>
         </div>
 
     </div>
@@ -168,6 +169,7 @@
     });
     //GST Checkbox Function
     var buttongst = document.getElementById('GSTButton2');
+
     buttongst.addEventListener('click', function (e) {
         e.preventDefault();
 
@@ -309,15 +311,15 @@
                 //var gstnofocus = document.getElementById("gstnumber").value;
                 let gstnofocus = document.getElementById("gstnumber").value.trim();
 
-                
+
                 var regex = /^[0-9]{2}[A-Z]{5}[0-9]{4}[A-Z]{1}[1-9A-Z]{1}Z[A-Z0-9]{1}$/;
-             
+
                 if (!regex.test(gstnofocus)) {
                     var gstnoToDisplay = document.getElementById("error-message10");
                     gstnoToDisplay.style.display = "none";
                     document.getElementById('gstErrorMessage').innerText = "Enter 15-digit GST number..";
                     return false;
-                } 
+                }
                 else {
 
                     document.getElementById('gstErrorMessage').innerText = "";
@@ -337,12 +339,21 @@
 
                 var emailRegex = /^\w+([\.-]?\w+)*@@\w+([\.-]?\w+)*(\.\w{2,3})+$/;
                 if (gstemailfocus == "") {
-
-                } else if (!emailRegex.test(gstemailfocus)) {
+                    var gstemail = document.getElementById("error-1email");
+                    gstemail.style.display = "block";
+                    document.getElementById("emailAddressGST").focus();
+                    return false;
+                }
+                else {
+                    var gstemail = document.getElementById("error-1email");
+                    gstemail.style.display = "none";
+                }
+                if (!emailRegex.test(gstemailfocus)) {
                     //document.getElementById('gstEmailErrorMessage').innerText = "Enter a valid email address.";
                     document.getElementById('emailErrorMessageGST').innerText = "Enter a valid email address.";
                     return false;
-                } else {
+                }
+                else {
 
 
                 }
@@ -467,17 +478,21 @@
             errorMessage.innerText = "";
         }
 
-        // if (email.trim() === "") {
-        //     errorDisplay.style.display = "block";
-        //     document.getElementById("emailAddress").focus();
-        //     return false;
-        // } else {
-        //     errorDisplay.style.display = "none";
-        // }
+        var gstEmail = document.getElementById("emailAddressGST").value;
+        if (gstEmail == "") {
+            var gstToDisplay = document.getElementById("error-1email");
+            gstToDisplay.style.display = "block";
+            document.getElementById("emailAddressGST").focus();
+            return false;
+        }
+        else {
+            var gstToDisplay = document.getElementById("error-1email");
+            gstToDisplay.style.display = "none";
+        }
 
     }
-    
-    
+
+
     // Phone number
     function validatePhoneNumber(event) {
         debugger;
@@ -572,13 +587,3 @@
         });
     });
 </script>
-
-
-
-
-
-
-
-
-
-
