--- a/CoporateBooking/Views/ResultFlightView/FlightView.cshtml
+++ b/CoporateBooking/Views/ResultFlightView/FlightView.cshtml
@@ -148,7 +148,7 @@
                                                     <span class="autodropdownOneWay">
                                                         <select id="autodropdownOneWayId" name="autodropdownOneWayId" onchange="OnewaySelection()">
                                                             <option value="" style="display:none;">Please select</option>
-                                                            @foreach (var item in Citynamelist.GetAllCityData())
+                                                            @foreach (var item in Citynamelist.GetCityData())
                                                             {
                                                                 <option value="@item.citycode">@item.cityname - @item.citycode -<br>@item.airportname </option>
 
@@ -160,7 +160,7 @@
                                                     <img src="~/img/direction-arrows.png" />
                                                 </div>
                                                 <div class="col-12 col-md-10 col-lg-2 space autocomplete">
-                                                    <label style="margin-bottom: 0.1rem;">Flying to</label>
+                                                    <label class=""></label>
                                                     <span class="input-group-text" id="basic-addon1">
                                                         @{
                                                             var selectedCityArival = Citynamelist.GetAllCityData()
@@ -178,8 +178,8 @@
                                                     <span class="autoarrivalOneway">
                                                         <select id="arrivalItemOnewayId" name="arrivalItemOnewayId" onchange="arrivalOneway()">
                                                             @* <option value="">Please select</option> *@
-                                                            <option value="" style="display:none;">Please select</option> 
-                                                            @foreach (var item in Citynamelist.GetAllCityData())
+                                                            <option value="" style="display:none;">Please select</option>
+                                                            @foreach (var item in Citynamelist.GetCityData())
                                                             {
                                                                 <option value="@item.citycode">@item.cityname - @item.citycode -<br>@item.airportname </option>
 
@@ -2630,6 +2630,12 @@
             $('.autoarrivalOneway').hide();
             var chosenInput = document.querySelector('.chosen-search input');
             chosenInput.focus();
+
+
+
+            if (!chosenInput.hasAttribute("onkeyup")) {
+                chosenInput.setAttribute("onkeyup", "filterCities(this.value)");
+            }
         });
 
 
@@ -2657,7 +2663,7 @@
             var cityName = cityDetails[0].trim();
             var cityCode = cityDetails[1].trim();
             var airportName = cityDetails[2].trim();
-            document.getElementById("myInput").value = cityName+"-"+cityCode;
+            document.getElementById("myInput").value = cityName + "-" + cityCode;
             $('.chosen-drop').hide();
             dropdown.selectedIndex = -1;
         }
@@ -2675,6 +2681,10 @@
             $('.autodropdownOneWay').hide();
             var chosenInput3 = document.querySelector('.autoarrivalOneway input');
             chosenInput3.focus();
+
+            if (!chosenInput3.hasAttribute("onkeyup")) {
+                chosenInput3.setAttribute("onkeyup", "filterCities(this.value)");
+            }
         });
 
         $(document.body).on('click', function (event) {
@@ -2703,7 +2713,7 @@
             var cityName = cityDetails[0].trim();
             var cityCode = cityDetails[1].trim();
             var airportName = cityDetails[2].trim();
-            document.getElementById("myInput1").value = cityName+"-"+cityCode;
+            document.getElementById("myInput1").value = cityName + "-" + cityCode;
             $('.chosen-drop').hide();
             dropdown.selectedIndex = -1;
         }
@@ -2734,10 +2744,32 @@
         window.onupload = function () { null };
 
 
+        function filterCities(query) {
+            if (query.length < 3) return;
+            fetch(`/FlightSearchIndex/GetFilteredCities?query=${encodeURIComponent(query)}`)
+                .then(response => response.json())
+                .then(data => {
+                    currentResults = data;
+                    updateDropdown(currentResults, query);
+                });
+        }
 
+        function updateDropdown(data, query) {
+            const isArrivalDropdownVisible = $('#arrivalItemOnewayId').next('.chosen-container').find('.chosen-drop').is(':visible');
+            const dropdown = document.getElementById(isArrivalDropdownVisible ? "arrivalItemOnewayId" : "autodropdownOneWayId");
+            const inputField = document.querySelector(isArrivalDropdownVisible ? '.autoarrivalOneway input' : '.chosen-search input');
+            const currentInput = inputField.value;
 
+            dropdown.innerHTML = `<option value="" style="display: none;">Please select</option>
+                        ${data.map(item => `<option value="${item.citycode}">${item.cityname} - ${item.citycode} - ${item.airportname}</option>`).join('')}`;
 
+            $(dropdown).trigger("chosen:updated");
 
+            if (currentInput === query) {
+                inputField.value = currentInput;
+            }
+            inputField.focus();
+        }
 
     </script>
 
