--- a/OnionConsumeWebAPI/Views/GDSCommitBooking/booking.cshtml
+++ b/OnionConsumeWebAPI/Views/GDSCommitBooking/booking.cshtml
@@ -1,4 +1,5 @@
 ﻿@using System.Collections;
+@using OnionArchitectureAPI.Services.Barcode;
 @model DomainLayer.ViewModel.AirLinePNRTicket
 @{
     var data = Model;
@@ -167,6 +168,10 @@
                     Hashtable htseat = Model.AirlinePNR[a].Seatdata;
                     Hashtable htmeal = Model.AirlinePNR[a].Mealdata;
                     Hashtable htbag = Model.AirlinePNR[a].Bagdata;
+
+                    Hashtable htpax = Model.AirlinePNR[a].htpax;
+                    Hashtable htnameempty = Model.AirlinePNR[a].htnameempty;
+                    Hashtable htname = Model.AirlinePNR[a].htname;
                     <div class="container" id="pdfdwonloadAkasa">
                         <div class="flight-tckt-main">
                             <div class="d-flex justify-content-end ticketdwn" type="button" onclick="downloadPDF()">
@@ -324,7 +329,7 @@
                                             <th rowspan="2" class="align-middle">mobile  Number</th>
                                             <th rowspan="2" class="align-middle">Ticket Number</th>
                                             <th rowspan="2" class="align-middle">Status</th>
-                                            <!--<th rowspan="2" class="align-middle barcode">Bar code</th>-->
+                                            <th rowspan="2" class="align-middle barcode">Bar code</th>
                                         </tr>
                                         <tr>
                                             <th class="col-one">Sector</th>
@@ -339,16 +344,30 @@
                                             @for (int i3 = 0; i3 < @Model.AirlinePNR[a].journeys[0].segments.Count; i3++)
                                             {
                                                 string barcodeimageUrl = string.Empty;
-                                                if (Model.AirlinePNR[a].passengers[i2].barcodestringlst != null && Model.AirlinePNR[a].passengers[i2].barcodestringlst.Count > 0 && i3 == 0)
-                                                {
-                                                    barcodeimageUrl = @Model.AirlinePNR[a].passengers[i2].barcodestringlst[0].Trim();
-                                                }
-                                                else if (Model.AirlinePNR[a].passengers[i2].barcodestringlst != null && Model.AirlinePNR[a].passengers[i2].barcodestringlst.Count > 0 && i3 == 1)
-                                                {
-                                                    //barcodeimageUrl = @Model.AirlinePNR[a].passengers[i2].barcodestringlst[1].Trim();
-                                                }
+
                                                 <tr>
                                                     @{
+                                                        BarcodeUtility BarcodeUtility = new BarcodeUtility();
+                                                        if (htpax.Contains(@Model.AirlinePNR[a].passengers[i2].name.first.Replace(" ", "_") + "_" + @Model.AirlinePNR[a].journeys[0].segments[i3].designator.origin + "_" + @Model.AirlinePNR[a].journeys[0].segments[i3].designator.destination))
+                                                        {
+                                                            string _data = @Model.AirlinePNR[a].passengers[i2].name.first.Replace(" ", "_") + "_"  + @Model.AirlinePNR[a].journeys[0].segments[i3].designator.origin + "_" + @Model.AirlinePNR[a].journeys[0].segments[i3].designator.destination;
+                                                            if (htpax.Contains(_data))
+                                                            {
+                                                                barcodeimageUrl = htpax[_data].ToString();
+                                                                barcodeimageUrl = BarcodeUtility.BarcodereadUtility(barcodeimageUrl).Trim();
+                                                            }
+
+                                                        }
+                                                        else
+                                                        {
+                                                            string _data = @Model.AirlinePNR[a].passengers[i2].name.first.Replace(" ","_") + "_" + @Model.AirlinePNR[a].journeys[0].segments[i3].designator.origin + "_" + @Model.AirlinePNR[a].journeys[0].segments[i3].designator.destination;
+                                                            if (htnameempty.Contains(_data))
+                                                            {
+                                                                barcodeimageUrl = htnameempty[_data].ToString();
+                                                                barcodeimageUrl = BarcodeUtility.BarcodereadUtility(barcodeimageUrl).Trim();
+                                                            }
+
+                                                        }
                                                         if (i3 == 0)
                                                         {
                                                             int segmentscount = @Model.AirlinePNR[a].journeys[0].segments.Count;
@@ -367,7 +386,7 @@
                                                     <td>@Model.AirlinePNR[a].journeys[0].segments[i3].designator.origin - @Model.AirlinePNR[a].journeys[0].segments[i3].designator.destination </td>
                                                     <td>@Model.AirlinePNR[a].journeys[0].segments[i3].identifier.carrierCode - @Model.AirlinePNR[a].journeys[0].segments[i3].identifier.identifier</td>
                                                     @{
-                                                        string hashdata = @Model.AirlinePNR[a].passengers[i2].passengerKey + "_" + @Model.AirlinePNR[a].journeys[0].segments[i3].designator.origin + "_" + @Model.AirlinePNR[a].journeys[0].segments[i3].designator.destination;
+                                                        string hashdata = @Model.AirlinePNR[a].passengers[i2].name.first.ToString().Replace(" ", "_") + "_" + @Model.AirlinePNR[a].journeys[0].segments[i3].designator.origin + "_" + @Model.AirlinePNR[a].journeys[0].segments[i3].designator.destination;
 
                                                         if (htseat != null)
                                                         {
@@ -384,58 +403,54 @@
                                                     }
                                                     <td>AD1WSM/1/1</td>
                                                     <td>Confirm</td>
-                                                    @* @if (i3 == 1)
-                                // {
-                                //     if (Model.AirlinePNR[a].passengers[i2].passengerTypeCode == "INFT")
-                                //     {
-                                //         <td></td>
-                                //     }
-                                //     else
-                                //     {
-                                //         if (barcodeimageUrl != "")
-                                //         {
-                                //             int segmentscount = @Model.AirlinePNR[a].journeys[0].segments.Count;
-                                //             if (segmentscount == 1)
-                                //             {
-                                //                 <td rowspan="1" style="vertical-align:middle;"><img src="@barcodeimageUrl" alt="barcode"></td>
-                                //             }
-                                //             if (segmentscount == 2)
-                                //             {
-                                //                 <td rowspan="2" style="vertical-align:middle;"><img src="@barcodeimageUrl" alt="barcode"></td>
-                                //             }
-                                //         }
-                                //         // else
-                                //         // {
-                                //         //     <td></td>
-                                //         // }
-                                //     }
-                                // }
-                                // else
-                                // {
-                                //     if (Model.AirlinePNR[a].passengers[i2].passengerTypeCode == "INFT")
-                                //     {
-                                //         <td></td>
-                                //     }
-                                //     else
-                                //     {
-                                //         if (barcodeimageUrl != "")
-                                //         {
-                                //             int segmentscount = @Model.AirlinePNR[a].journeys[0].segments.Count;
-                                //             if (segmentscount == 1)
-                                //             {
-                                //                 <td rowspan="1" style="vertical-align:middle;width:110px;"><img src="@barcodeimageUrl" alt="barcode"></td>
-                                //             }
-                                //             if (segmentscount == 2)
-                                //             {
-                                //                 <td rowspan="2" style="vertical-align:middle;width:110px;"><img src="@barcodeimageUrl" alt="barcode"></td>
-                                //             }
-                                //         }
-                                //         // else
-                                //         // {
-                                //         //     <td></td>
-                                //         // }
-                                //     }
-                                // }*@
+                                                    @if (i3 == 1)
+                                                    {
+                                                        if (Model.AirlinePNR[a].passengers[i2].passengerTypeCode == "INFT")
+                                                        {
+                                                            <td rowspan="1" style="vertical-align:middle;"></td>
+                                                        }
+                                                        else
+                                                        {
+                                                            if (barcodeimageUrl != "")
+                                                            {
+                                                                int segmentscount = @Model.AirlinePNR[a].journeys[0].segments.Count;
+                                                                if (segmentscount == 1)
+                                                                {
+                                                                    <td rowspan="1" style="vertical-align:middle;width:254px;"><img src="@barcodeimageUrl" alt="barcode"></td>
+                                                                }
+                                                                if (segmentscount == 2)
+                                                                {
+                                                                    <td rowspan="1" style="vertical-align:middle;width:254px"><img src="@barcodeimageUrl" alt="barcode"></td>
+                                                                }
+
+                                                            }
+
+                                                        }
+                                                    }
+                                                    else
+                                                    {
+                                                        if (Model.AirlinePNR[a].passengers[i2].passengerTypeCode == "INFT")
+                                                        {
+                                                            <td rowspan="1" style="vertical-align:middle;"></td>
+                                                        }
+                                                        else
+                                                        {
+                                                            if (barcodeimageUrl != "")
+                                                            {
+                                                                int segmentscount = @Model.AirlinePNR[a].journeys[0].segments.Count;
+                                                                if (segmentscount == 1)
+                                                                {
+                                                                    <td rowspan="1" style="vertical-align:middle;width:254px;"><img src="@barcodeimageUrl" alt="barcode"></td>
+                                                                }
+
+                                                                if (segmentscount == 2)
+                                                                {
+                                                                    <td rowspan="1" style="vertical-align:middle;width:254px;"><img src="@barcodeimageUrl" alt="barcode"></td>
+                                                                }
+                                                            }
+
+                                                        }
+                                                    }
                                                 </tr>
                                             }
                                         }
@@ -493,7 +508,7 @@
                                                     <td>@Model.AirlinePNR[a].journeys[0].segments[i3].identifier.carrierCode - @Model.AirlinePNR[a].journeys[0].segments[i3].identifier.identifier</td>
 
                                                     @{
-                                                        string hashdata = @Model.AirlinePNR[a].passengers[i2].passengerKey + "_" + @Model.AirlinePNR[a].journeys[0].segments[i3].designator.origin + "_" + @Model.AirlinePNR[a].journeys[0].segments[i3].designator.destination;
+                                                        string hashdata = @Model.AirlinePNR[a].passengers[i2].name.first.ToString().Replace(" ", "_") + "_" + @Model.AirlinePNR[a].journeys[0].segments[i3].designator.origin + "_" + @Model.AirlinePNR[a].journeys[0].segments[i3].designator.destination;
 
                                                         if (htmeal != null)
                                                         {
