--- a/CoporateBooking/Views/AATripsell/_ContactDetailsPartialView.cshtml
+++ b/CoporateBooking/Views/AATripsell/_ContactDetailsPartialView.cshtml
@@ -42,7 +42,7 @@
 
         <div class="col-md-2 phone-number">
             <div class="form-input">
-              
+
                 <input type="text" name="number" id="number" maxlength="10" class="phoneNClass" placeholder="Phone Number" oninput="validatePhoneNumber(event)">
 
             </div>
@@ -54,12 +54,13 @@
                 <div class="kk">
                     Same as lead passenger <button id="leadpassengerButton2" class="checkbox-button ms-2"></button>
                 </div>
-                <div class="ms-3">
-                    Do you have GST  <button id="GSTButton2" class="checkbox-button ms-2"></button>
+                <div class="ms-3 hidden">
+                    Do you have GST  @*<button id="GSTButton2" class="checkbox-button ms-2"></button>*@
+                    <input type="checkbox" id="GSTButton2" class="checkbox-button ms-2" checked>
 
                 </div>
             </div>
-            <div><input type="submit" class="btn btn-primary pagelaodSg" value="Save"  /></div>
+            <div><input type="submit" class="btn btn-primary pagelaodSg" value="Save" /></div>
 
         </div>
         <div class="col-md-12 hid-block hidden">
@@ -70,14 +71,14 @@
         <div class="col-md-3">
             <div class="form-input">
 
-                <input type="text" id="gstname" maxlength="32" name="companyName" oninput="validateInputgst(event)" class="companyName hid-block hidden" placeholder="Company Name">
+                <input type="text" id="gstname" maxlength="32" name="companyName" oninput="validateInputgst(event)" class="companyName hid-block" placeholder="Company Name">
             </div>
             <p id="errorMessagegst" style="color: red;font-size:13px;"></p>
             <p id="error-message9" class="error-message" style="display:none">Enter Company Name</p>
         </div>
         <div class="col-md-3">
             <div class="form-input">
-                <input type="text" id="gstnumber" maxlength="15" name="customerNumber" oninput="validateGST(event)" class="companyName hid-block hidden" placeholder="GST Number">
+                <input type="text" id="gstnumber" maxlength="15" name="customerNumber" oninput="validateGST(event)" class="companyName hid-block" placeholder="GST Number">
             </div>
             <p id="gstErrorMessage" style="color: red;font-size:13px;"></p>
             <p id="error-message10" class="error-message" style="display:none">Enter GST Number</p>
@@ -86,11 +87,10 @@
 
         <div class="col-md-3">
             <div class="form-input">
-                <input type="text" id="emailAddressGST" name="emailAddressgst" maxlength="40" oninput="validateEmailGST(event)" class="gstemail hid-block hidden" placeholder="Email ID">
+                <input type="text" id="emailAddressGST" name="emailAddressgst" maxlength="40" oninput="validateEmailGST(event)" class="gstemail hid-block" placeholder="Email ID">
             </div>
             <p id="emailErrorMessageGST" style="color: red; font-size:13px;"></p>
-            <p id="error-message11" class="error-message" style="display:none">Enter GST email</p>
-           
+            <p id="error-1email" class="error-message" style="display:none">Enter email address</p>
         </div>
 
     </div>
@@ -258,8 +258,8 @@
             // email
             let emailfocus = document.getElementById("emailAddress").value;
             var regex = /^\w+([\.-]?\w+)*@@\w+([\.-]?\w+)*(\.\w{2,3})+$/;
-            //var regex = /^[a-zA-Z0-9._%+-]+@@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,3}$/;     
-            //var regex =/^[a-zA-Z0-9._%+-]+[^\.]@@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,3}$/;     
+            //var regex = /^[a-zA-Z0-9._%+-]+@@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,3}$/;
+            //var regex =/^[a-zA-Z0-9._%+-]+[^\.]@@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,3}$/;
             if (!regex.test(emailfocus)) {
                 let emailToDisplay = document.getElementById("error-message7");
                 emailToDisplay.style.display = "none";
@@ -284,8 +284,7 @@
             //Phone Number
 
             let phonefocus = document.getElementById("number").value;
-            if (phonefocus == "")
-            {
+            if (phonefocus == "") {
                 let phoneEToDisplay = document.getElementById("error-message8");
                 phoneEToDisplay.style.display = "block";
                 document.getElementById('phoneNumberErrorMessage').innerText = "";
@@ -333,7 +332,7 @@
                     gstnoToDisplay.style.display = "none";
                     document.getElementById('gstErrorMessage').innerText = "Enter 15-digit GST number.";
                     return false;
-                } 
+                }
                 else {
                     document.getElementById('gstErrorMessage').innerText = "";
                 }
@@ -353,16 +352,25 @@
                 //var emailRegex = /^[a-zA-Z0-9._%+-]+[^\.]@@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,3}$/;
                 var emailRegex = /^\w+([\.-]?\w+)*@@\w+([\.-]?\w+)*(\.\w{2,3})+$/;
                 if (gstemailfocus == "") {
-                  
-                } else if (!emailRegex.test(gstemailfocus)) {
+                    var gstemail = document.getElementById("error-1email");
+                    gstemail.style.display = "block";
+                    document.getElementById("emailAddressGST").focus();
+                    return false;
+                }
+                else {
+                    var gstemail = document.getElementById("error-1email");
+                    gstemail.style.display = "none";
+                }
+
+                if (!emailRegex.test(gstemailfocus)) {
                     //document.getElementById('gstEmailErrorMessage').innerText = "Enter a valid email address.";
                     document.getElementById('emailErrorMessageGST').innerText = "Enter a valid email address.";
                     return false;
                 } else {
-                  
-                   
-                } 
-            
+
+
+                }
+
 
             }
             var contactFormData = new FormData($("#contactForm")[0]);
@@ -484,37 +492,41 @@
             errorMessage.innerText = "";
         }
 
-        // if (email.trim() === "") {
-        //     errorDisplay.style.display = "block";
-        //     document.getElementById("emailAddress").focus();
-        //     return false;
-        // } else {
-        //     errorDisplay.style.display = "none";
-        // }
+        var gstEmail = document.getElementById("emailAddressGST").value;
+        if (gstEmail == "") {
+            var gstToDisplay = document.getElementById("error-1email");
+            gstToDisplay.style.display = "block";
+            document.getElementById("emailAddressGST").focus();
+            return false;
+        }
+        else {
+            var gstToDisplay = document.getElementById("error-1email");
+            gstToDisplay.style.display = "none";
+        }
 
     }
 
     function validatePhoneNumber(event) {
 
         const phoneNumber = event.target.value;
-        
+
         // Regex to validate a phone number that starts with 1-9 and is followed by digits
         //const regex = /^[1-9][0-9]{9}$/;
 
         const regex = /^\d{10,}$/;
 
-       // const regex = /^[0-9]+$/;
+        // const regex = /^[0-9]+$/;
 
         if (!regex.test(phoneNumber)) {
             if (phoneNumber === "") {
                 return false;
             }
-          else {
-            document.getElementById('phoneNumberErrorMessage').innerText = "Invalid Phone Number";//Invalid Phone Number
-            let phoneToDisplay = document.getElementById("error-message8");
-            phoneToDisplay.style.display = "block";
-            
-        }
+            else {
+                document.getElementById('phoneNumberErrorMessage').innerText = "Invalid Phone Number";//Invalid Phone Number
+                let phoneToDisplay = document.getElementById("error-message8");
+                phoneToDisplay.style.display = "block";
+
+            }
         } else {
             document.getElementById('phoneNumberErrorMessage').innerText = "";
         }
