--- a/CoporateBooking/Views/IndigoTripsell/_IndigoContactDetailsPartialView.cshtml
+++ b/CoporateBooking/Views/IndigoTripsell/_IndigoContactDetailsPartialView.cshtml
@@ -3,6 +3,11 @@
     <div class="row y-gap-10 row mt-2 py-3 mb-3">
         <div class="col-md-3">
             <div class="form-input ">
+                <select id="title" name="title" class="titleClass" style="border: 1px solid var(--color-border);">
+                    <option value="MR">Mr.</option>
+                    <option value="MRS">Mrs.</option>
+                    <option value="MS">Ms.</option>
+                </select>
                 <input type="text" id="first" name="first" maxlength="32" oninput="validateInput(event)" class="firstNClass" style='text-transform:uppercase' placeholder="First Name">
             </div>
             <p id="error-message1" class="error-message" style="display:none">Enter First name</p>
@@ -27,8 +32,12 @@
         </div>
 
         <div class="col-md-1 phone-code">
-            <select class="form-control form-control-lg">
-                <option>+91</option>
+            <select name="countrycode" class="form-control form-control-lg">
+                <option value="+91">+91 (India)</option>
+                <option value="+1">+1 (USA)</option>
+                <option value="+44">+44 (UK)</option>
+                <option value="+61">+61 (Australia)</option>
+                <option value="+81">+81 (Japan)</option>
             </select>
         </div>
         <div class="col-md-2 phone-number">
@@ -45,8 +54,8 @@
                     Same as lead passenger <button id="leadpassengerButton2" class="checkbox-button ms-2"></button>
                 </div>
                 <div class="ms-3  hidden">
-                    Enter GST details  <button id="GSTButton2" class="checkbox-button ms-2"></button>
-
+                    Enter GST details
+                    <input type="checkbox" id="GSTButton2" class="checkbox-button ms-2" checked>
                 </div>
             </div>
             <div><input type="submit" class="btn btn-primary pagelaodSg" value="Save" /></div>
