--- a/CoporateBooking/Views/SGTripsell/_ContactDetailsPartialView.cshtml
+++ b/CoporateBooking/Views/SGTripsell/_ContactDetailsPartialView.cshtml
@@ -6,6 +6,11 @@
 
         <div class="col-md-3">
             <div class="form-input ">
+                <select id="title" name="title" class="titleClass" style="border: 1px solid var(--color-border);">
+                    <option value="MR">Mr.</option>
+                    <option value="MRS">Mrs.</option>
+                    <option value="MS">Ms.</option>
+                </select>
                 <input type="text" id="first" name="first" maxlength="32" oninput="validateInput(event)" class="firstNClass" style='text-transform:uppercase' placeholder="First Name">
             </div>
             <p id="error-message1" class="error-message" style="display:none">Enter First name</p>
@@ -30,8 +35,12 @@
         </div>
 
         <div class="col-md-1 phone-code">
-            <select class="form-control form-control-lg">
-                <option>+91</option>
+            <select name="countrycode" class="form-control form-control-lg">
+                <option value="+91">+91 (India)</option>
+                <option value="+1">+1 (USA)</option>
+                <option value="+44">+44 (UK)</option>
+                <option value="+61">+61 (Australia)</option>
+                <option value="+81">+81 (Japan)</option>
             </select>
         </div>
         <div class="col-md-2 phone-number">
@@ -47,7 +56,8 @@
                     Same as lead passenger <button id="leadpassengerButton" class="checkbox-button ms-2"></button>
                 </div>
                 <div class="ms-3 hidden">
-                    Do you have GST  <button id="GSTButton" class="checkbox-button ms-2"></button>
+                    Do you have GST
+                    <input type="checkbox" id="GSTButton" class="checkbox-button ms-2" checked>
 
                 </div>
             </div>
@@ -82,7 +92,7 @@
             </div>
             <p id="emailErrorMessageGST" style="color: red; font-size:13px;"></p>
             <p id="error-1email" class="error-message" style="display:none">Enter email address</p>
-           
+
         </div>
 
 
@@ -306,6 +316,7 @@
 
             //Gst
             var buttongst = document.getElementById('GSTButton');
+            buttongst.checked = true;
             if (buttongst.checked == true) {
 
                 let gstnamefocus = document.getElementById("gstname").value;
@@ -365,19 +376,6 @@
 
 
                 }
-
-                // var emailRegex = /^(?!.*\.\.)[^\s@@]+@@[^\s@@]+\.[^\s@@]+$/;
-
-                // if (gstemailfocus == "") {
-
-                // } else if (!emailRegex.test(gstemailfocus)) {
-                //     document.getElementById('gstEmailErrorMessage').innerText = "Enter a valid email address.";
-                //     return false;
-                // } else {
-
-
-                // }
-
 
             }
             var contactFormData = new FormData($("#contactFormSG")[0]);
